# audio-dataset-audit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_check.md
.github/workflows/: ci.yml  lint.yml
docs/: concepts.md  examples.md  manifest-schema.md  roadmap.md
docs/github_issues/: add-audio-probing.md  add-config-support.md  add-summary-visualizations.md
docs/releases/: v0.2.0.md  v0.3.0-draft.md
examples/: config.toml  leaky_manifest.csv  leaky_report.html  leaky_report.md  probe_manifest.csv  probe_report.html  probe_report.json  probe_report.md
notebooks/: walkthrough.ipynb
src/audiodatasetaudit/: cli.py  config.py  manifest.py  models.py  schema.py
src/audiodatasetaudit/checks/: __init__.py  audio_readability.py  base.py  channel_consistency.py  duplicates.py  duration.py  file_existence.py  imbalance.py  leakage.py  missingness.py  sample_rate.py  split_integrity.py
src/audiodatasetaudit/io/: audio_probe.py
src/audiodatasetaudit/reports/: __init__.py  html_report.py  json_report.py  markdown_report.py
src/audiodatasetaudit/utils/: io.py
tests/: conftest.py  test_audio_probe.py  test_audio_readability.py  test_channels.py  test_duplicates.py  test_duration.py  test_file_existence.py  test_html_report.py  test_imbalance.py  test_leakage.py  test_manifest.py  test_missingness.py  test_sample_rate.py  test_schema.py  test_split_integrity.py
tests/fixtures/: sample_manifest.csv
